--- a/jogo.html
+++ b/jogo.html
@@ -12,15 +12,16 @@
     <h1>Jogo da forca</h1>
   </header>
 
+
+
   <div id="new"></div>
 
   <section class="container-2">
     <img id="forca" src="images/forca.png" alt="">
     <div id="word" class="container-2-2"></div>
-
-    
   </section>
   <section id="letters" class="container-3"></section>
+  <p>Dica: distros linux</p>
 
   <div class="button-inicio">
     <a href="index.html">
