--- a/jogo.html
+++ b/jogo.html
@@ -28,7 +28,10 @@
       <input type="button" value="Voltar">
     </a>
   </div>
-
+  
+  <footer>
+    <p>Feito com ❤️ por <a href="https://github.com/vits56">Bruno Bastos Duarte</a></p>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
